--- a/src/style.css
+++ b/src/style.css
@@ -18,10 +18,11 @@ input {
 main {
   grid-template-rows: auto 1fr;
 }
-#item-list > div:nth-child(odd) {
+#ToDoTile:nth-of-type(odd) {
   background-color: #f5f5f5;
 }
 /* capitalize the first letter of each chile of the ToDoTile */
 #ToDoTile > *:first-letter {
   text-transform: capitalize;
+  border-collapse: collapse;
 }
